--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,1 +1,13 @@
-
+spring:
+  application:
+    name: dev-config
+    
+eureka:
+    instance:
+      ip-address: true
+    client:
+     register-with-eureka: true
+     fetch-registry: true
+     service-url:
+       defaultZone: http://localhost:8761/eureka/
+          
